--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,26 +1,35 @@
-.margen{
+.margen {
     margin-top: 4em;
 }
 
-#header{
+#header {
     background: url('../assets/images/1.jpg') center center no-repeat;
     background-size: cover;
     height: 100vh;
     display: flex;
     align-items: center;
-    filter:brightness(0.8); 
-    
+    filter: brightness(0.8);
+
 
 }
 
-#header .h1-tittle{
+#header .h1-tittle {
     font-size: 60px;
 }
 
-.colorText{
+.colorText {
     color: white;
     font-weight: bold;
-    
+
 }
 
+#stadistic {
+    padding: 3em;
+}
+
+#stadistic .card-text {
+    font-weight: bold;
+    font-size: 40px;
+    color: red;
+}
 
